y.output
Nonterminals useless in grammar

    binary_op


Terminals unused in grammar

    OP


Rules useless in grammar

   73 binary_op: PLUS
   74          | MOINS
   75          | MUL
   76          | DIV
   77          | LSHIFT
   78          | RSHIFT
   79          | BAND
   80          | BOR


Grammar

    0 $accept: programme $end

    1 programme: liste_declarations liste_fonctions

    2 liste_declarations: liste_declarations declaration
    3                   | %empty

    4 liste_fonctions: liste_fonctions fonction
    5                | fonction

    6 declaration: type liste_declarateurs ';'

    7 liste_declarateurs: liste_declarateurs ',' declarateur
    8                   | declarateur

    9 declarateur: IDENTIFICATEUR
   10            | declarateur '[' CONSTANTE ']'

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'
   12         | EXTERN type IDENTIFICATEUR '(' liste_parms ')' ';'

   13 type: VOID
   14     | INT

   15 params_liste_creator: params_liste_creator ',' parm
   16                     | parm

   17 liste_parms: params_liste_creator
   18            | %empty

   19 parm: INT IDENTIFICATEUR

   20 liste_instructions: liste_instructions instruction
   21                   | %empty

   22 instruction: iteration
   23            | selection
   24            | saut
   25            | affectation ';'
   26            | bloc
   27            | appel

   28 iteration: FOR '(' affectation ';' condition ';' affectation ')' instruction
   29          | WHILE '(' condition ')' instruction
   30          | error '\n'

   31 selection: IF '(' condition ')' instruction
   32          | IF '(' condition ')' instruction ELSE instruction
   33          | SWITCH '(' expression ')' instruction
   34          | CASE CONSTANTE ':' instruction
   35          | DEFAULT ':' instruction

   36 saut: BREAK ';'
   37     | RETURN ';'
   38     | RETURN expression ';'

   39 affectation: variable '=' expression

   40 bloc: '{' liste_declarations liste_instructions '}'

   41 appel: IDENTIFICATEUR '(' liste_expressions ')' ';'

   42 variable: IDENTIFICATEUR
   43         | variable '[' expression ']'

   44 expression: '(' expression ')'
   45           | expression PLUS expression
   46           | expression MOINS expression
   47           | expression DIV expression
   48           | expression MUL expression
   49           | expression RSHIFT expression
   50           | expression LSHIFT expression
   51           | expression BAND expression
   52           | expression BOR expression
   53           | MOINS expression
   54           | CONSTANTE
   55           | variable
   56           | IDENTIFICATEUR '(' liste_expressions ')'

   57 liste_expressions: expr_liste_creator
   58                  | %empty

   59 expr_liste_creator: expr_liste_creator ',' expression
   60                   | expression

   61 condition: NOT '(' condition ')'
   62          | condition binary_rel condition
   63          | '(' condition ')'
   64          | expression binary_comp expression

   65 binary_rel: LAND
   66           | LOR

   67 binary_comp: LT
   68            | GT
   69            | GEQ
   70            | LEQ
   71            | EQ
   72            | NEQ


Terminals, with rules where they appear

    $end (0) 0
    '\n' (10) 30
    '(' (40) 11 12 28 29 31 32 33 41 44 56 61 63
    ')' (41) 11 12 28 29 31 32 33 41 44 56 61 63
    ',' (44) 7 15 59
    ':' (58) 34 35
    ';' (59) 6 12 25 28 36 37 38 41
    '=' (61) 39
    '[' (91) 10 43
    ']' (93) 10 43
    '{' (123) 11 40
    '}' (125) 11 40
    error (256) 30
    IDENTIFICATEUR <id> (258) 9 11 12 19 41 42 56
    CONSTANTE <id> (259) 10 34 54
    VOID <id> (260) 13
    INT <id> (261) 14 19
    FOR <id> (262) 28
    WHILE <id> (263) 29
    IF <id> (264) 31 32
    ELSE <id> (265) 32
    SWITCH <id> (266) 33
    CASE <id> (267) 34
    DEFAULT <id> (268) 35
    BREAK <id> (269) 36
    RETURN <id> (270) 37 38
    PLUS <id> (271) 45
    MOINS <id> (272) 46 53
    MUL <id> (273) 48
    DIV <id> (274) 47
    LSHIFT <id> (275) 50
    RSHIFT <id> (276) 49
    BAND <id> (277) 51
    BOR <id> (278) 52
    LAND <id> (279) 65
    LOR <id> (280) 66
    LT <id> (281) 67
    GT <id> (282) 68
    GEQ <id> (283) 69
    LEQ <id> (284) 70
    EQ <id> (285) 71
    NEQ <id> (286) 72
    NOT <id> (287) 61
    EXTERN <id> (288) 12
    THEN (289)
    OP (290)
    REL (291)


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    programme <id> (49)
        on left: 1
        on right: 0
    liste_declarations <tree> (50)
        on left: 2 3
        on right: 1 2 11 40
    liste_fonctions <id> (51)
        on left: 4 5
        on right: 1 4
    declaration <id> (52)
        on left: 6
        on right: 2
    liste_declarateurs <id> (53)
        on left: 7 8
        on right: 6 7
    declarateur <id> (54)
        on left: 9 10
        on right: 7 8 10
    fonction <id> (55)
        on left: 11 12
        on right: 4 5
    type <id> (56)
        on left: 13 14
        on right: 6 11 12
    params_liste_creator <id> (57)
        on left: 15 16
        on right: 15 17
    liste_parms <id> (58)
        on left: 17 18
        on right: 11 12
    parm <id> (59)
        on left: 19
        on right: 15 16
    liste_instructions <tree> (60)
        on left: 20 21
        on right: 11 20 40
    instruction <tree> (61)
        on left: 22 23 24 25 26 27
        on right: 20 28 29 31 32 33 34 35
    iteration <id> (62)
        on left: 28 29 30
        on right: 22
    selection <tree> (63)
        on left: 31 32 33 34 35
        on right: 23
    saut <tree> (64)
        on left: 36 37 38
        on right: 24
    affectation <tree> (65)
        on left: 39
        on right: 25 28
    bloc <tree> (66)
        on left: 40
        on right: 26
    appel <id> (67)
        on left: 41
        on right: 27
    variable <tree> (68)
        on left: 42 43
        on right: 39 43 55
    expression <tree> (69)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56
        on right: 33 38 39 43 44 45 46 47 48 49 50 51 52 53 59 60 64
    liste_expressions <id> (70)
        on left: 57 58
        on right: 41 56
    expr_liste_creator <id> (71)
        on left: 59 60
        on right: 57 59
    condition <tree> (72)
        on left: 61 62 63 64
        on right: 28 29 31 32 61 62 63
    binary_rel <id> (73)
        on left: 65 66
        on right: 62
    binary_comp <id> (74)
        on left: 67 68 69 70 71 72
        on right: 64


State 0

    0 $accept: . programme $end

    $default  reduce using rule 3 (liste_declarations)

    programme           go to state 1
    liste_declarations  go to state 2


State 1

    0 $accept: programme . $end

    $end  shift, and go to state 3


State 2

    1 programme: liste_declarations . liste_fonctions
    2 liste_declarations: liste_declarations . declaration

    VOID    shift, and go to state 4
    INT     shift, and go to state 5
    EXTERN  shift, and go to state 6

    liste_fonctions  go to state 7
    declaration      go to state 8
    fonction         go to state 9
    type             go to state 10


State 3

    0 $accept: programme $end .

    $default  accept


State 4

   13 type: VOID .

    $default  reduce using rule 13 (type)


State 5

   14 type: INT .

    $default  reduce using rule 14 (type)


State 6

   12 fonction: EXTERN . type IDENTIFICATEUR '(' liste_parms ')' ';'

    VOID  shift, and go to state 4
    INT   shift, and go to state 5

    type  go to state 11


State 7

    1 programme: liste_declarations liste_fonctions .
    4 liste_fonctions: liste_fonctions . fonction

    VOID    shift, and go to state 4
    INT     shift, and go to state 5
    EXTERN  shift, and go to state 6

    $default  reduce using rule 1 (programme)

    fonction  go to state 12
    type      go to state 13


State 8

    2 liste_declarations: liste_declarations declaration .

    $default  reduce using rule 2 (liste_declarations)


State 9

    5 liste_fonctions: fonction .

    $default  reduce using rule 5 (liste_fonctions)


State 10

    6 declaration: type . liste_declarateurs ';'
   11 fonction: type . IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    IDENTIFICATEUR  shift, and go to state 14

    liste_declarateurs  go to state 15
    declarateur         go to state 16


State 11

   12 fonction: EXTERN type . IDENTIFICATEUR '(' liste_parms ')' ';'

    IDENTIFICATEUR  shift, and go to state 17


State 12

    4 liste_fonctions: liste_fonctions fonction .

    $default  reduce using rule 4 (liste_fonctions)


State 13

   11 fonction: type . IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    IDENTIFICATEUR  shift, and go to state 18


State 14

    9 declarateur: IDENTIFICATEUR .
   11 fonction: type IDENTIFICATEUR . '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    '('  shift, and go to state 19

    $default  reduce using rule 9 (declarateur)


State 15

    6 declaration: type liste_declarateurs . ';'
    7 liste_declarateurs: liste_declarateurs . ',' declarateur

    ';'  shift, and go to state 20
    ','  shift, and go to state 21


State 16

    8 liste_declarateurs: declarateur .
   10 declarateur: declarateur . '[' CONSTANTE ']'

    '['  shift, and go to state 22

    $default  reduce using rule 8 (liste_declarateurs)


State 17

   12 fonction: EXTERN type IDENTIFICATEUR . '(' liste_parms ')' ';'

    '('  shift, and go to state 23


State 18

   11 fonction: type IDENTIFICATEUR . '(' liste_parms ')' '{' liste_declarations liste_instructions '}'

    '('  shift, and go to state 19


State 19

   11 fonction: type IDENTIFICATEUR '(' . liste_parms ')' '{' liste_declarations liste_instructions '}'

    INT  shift, and go to state 24

    $default  reduce using rule 18 (liste_parms)

    params_liste_creator  go to state 25
    liste_parms           go to state 26
    parm                  go to state 27


State 20

    6 declaration: type liste_declarateurs ';' .

    $default  reduce using rule 6 (declaration)


State 21

    7 liste_declarateurs: liste_declarateurs ',' . declarateur

    IDENTIFICATEUR  shift, and go to state 28

    declarateur  go to state 29


State 22

   10 declarateur: declarateur '[' . CONSTANTE ']'

    CONSTANTE  shift, and go to state 30


State 23

   12 fonction: EXTERN type IDENTIFICATEUR '(' . liste_parms ')' ';'

    INT  shift, and go to state 24

    $default  reduce using rule 18 (liste_parms)

    params_liste_creator  go to state 25
    liste_parms           go to state 31
    parm                  go to state 27


State 24

   19 parm: INT . IDENTIFICATEUR

    IDENTIFICATEUR  shift, and go to state 32


State 25

   15 params_liste_creator: params_liste_creator . ',' parm
   17 liste_parms: params_liste_creator .

    ','  shift, and go to state 33

    $default  reduce using rule 17 (liste_parms)


State 26

   11 fonction: type IDENTIFICATEUR '(' liste_parms . ')' '{' liste_declarations liste_instructions '}'

    ')'  shift, and go to state 34


State 27

   16 params_liste_creator: parm .

    $default  reduce using rule 16 (params_liste_creator)


State 28

    9 declarateur: IDENTIFICATEUR .

    $default  reduce using rule 9 (declarateur)


State 29

    7 liste_declarateurs: liste_declarateurs ',' declarateur .
   10 declarateur: declarateur . '[' CONSTANTE ']'

    '['  shift, and go to state 22

    $default  reduce using rule 7 (liste_declarateurs)


State 30

   10 declarateur: declarateur '[' CONSTANTE . ']'

    ']'  shift, and go to state 35


State 31

   12 fonction: EXTERN type IDENTIFICATEUR '(' liste_parms . ')' ';'

    ')'  shift, and go to state 36


State 32

   19 parm: INT IDENTIFICATEUR .

    $default  reduce using rule 19 (parm)


State 33

   15 params_liste_creator: params_liste_creator ',' . parm

    INT  shift, and go to state 24

    parm  go to state 37


State 34

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' . '{' liste_declarations liste_instructions '}'

    '{'  shift, and go to state 38


State 35

   10 declarateur: declarateur '[' CONSTANTE ']' .

    $default  reduce using rule 10 (declarateur)


State 36

   12 fonction: EXTERN type IDENTIFICATEUR '(' liste_parms ')' . ';'

    ';'  shift, and go to state 39


State 37

   15 params_liste_creator: params_liste_creator ',' parm .

    $default  reduce using rule 15 (params_liste_creator)


State 38

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' . liste_declarations liste_instructions '}'

    $default  reduce using rule 3 (liste_declarations)

    liste_declarations  go to state 40


State 39

   12 fonction: EXTERN type IDENTIFICATEUR '(' liste_parms ')' ';' .

    $default  reduce using rule 12 (fonction)


State 40

    2 liste_declarations: liste_declarations . declaration
   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations . liste_instructions '}'

    VOID  shift, and go to state 4
    INT   shift, and go to state 5

    $default  reduce using rule 21 (liste_instructions)

    declaration         go to state 8
    type                go to state 41
    liste_instructions  go to state 42


State 41

    6 declaration: type . liste_declarateurs ';'

    IDENTIFICATEUR  shift, and go to state 28

    liste_declarateurs  go to state 15
    declarateur         go to state 16


State 42

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions . '}'
   20 liste_instructions: liste_instructions . instruction

    error           shift, and go to state 43
    IDENTIFICATEUR  shift, and go to state 44
    FOR             shift, and go to state 45
    WHILE           shift, and go to state 46
    IF              shift, and go to state 47
    SWITCH          shift, and go to state 48
    CASE            shift, and go to state 49
    DEFAULT         shift, and go to state 50
    BREAK           shift, and go to state 51
    RETURN          shift, and go to state 52
    '{'             shift, and go to state 53
    '}'             shift, and go to state 54

    instruction  go to state 55
    iteration    go to state 56
    selection    go to state 57
    saut         go to state 58
    affectation  go to state 59
    bloc         go to state 60
    appel        go to state 61
    variable     go to state 62


State 43

   30 iteration: error . '\n'

    '\n'  shift, and go to state 63


State 44

   41 appel: IDENTIFICATEUR . '(' liste_expressions ')' ';'
   42 variable: IDENTIFICATEUR .

    '('  shift, and go to state 64

    $default  reduce using rule 42 (variable)


State 45

   28 iteration: FOR . '(' affectation ';' condition ';' affectation ')' instruction

    '('  shift, and go to state 65


State 46

   29 iteration: WHILE . '(' condition ')' instruction

    '('  shift, and go to state 66


State 47

   31 selection: IF . '(' condition ')' instruction
   32          | IF . '(' condition ')' instruction ELSE instruction

    '('  shift, and go to state 67


State 48

   33 selection: SWITCH . '(' expression ')' instruction

    '('  shift, and go to state 68


State 49

   34 selection: CASE . CONSTANTE ':' instruction

    CONSTANTE  shift, and go to state 69


State 50

   35 selection: DEFAULT . ':' instruction

    ':'  shift, and go to state 70


State 51

   36 saut: BREAK . ';'

    ';'  shift, and go to state 71


State 52

   37 saut: RETURN . ';'
   38     | RETURN . expression ';'

    IDENTIFICATEUR  shift, and go to state 72
    CONSTANTE       shift, and go to state 73
    MOINS           shift, and go to state 74
    ';'             shift, and go to state 75
    '('             shift, and go to state 76

    variable    go to state 77
    expression  go to state 78


State 53

   40 bloc: '{' . liste_declarations liste_instructions '}'

    $default  reduce using rule 3 (liste_declarations)

    liste_declarations  go to state 79


State 54

   11 fonction: type IDENTIFICATEUR '(' liste_parms ')' '{' liste_declarations liste_instructions '}' .

    $default  reduce using rule 11 (fonction)


State 55

   20 liste_instructions: liste_instructions instruction .

    $default  reduce using rule 20 (liste_instructions)


State 56

   22 instruction: iteration .

    $default  reduce using rule 22 (instruction)


State 57

   23 instruction: selection .

    $default  reduce using rule 23 (instruction)


State 58

   24 instruction: saut .

    $default  reduce using rule 24 (instruction)


State 59

   25 instruction: affectation . ';'

    ';'  shift, and go to state 80


State 60

   26 instruction: bloc .

    $default  reduce using rule 26 (instruction)


State 61

   27 instruction: appel .

    $default  reduce using rule 27 (instruction)


State 62

   39 affectation: variable . '=' expression
   43 variable: variable . '[' expression ']'

    '['  shift, and go to state 81
    '='  shift, and go to state 82


State 63

   30 iteration: error '\n' .

    $default  reduce using rule 30 (iteration)


State 64

   41 appel: IDENTIFICATEUR '(' . liste_expressions ')' ';'

    IDENTIFICATEUR  shift, and go to state 72
    CONSTANTE       shift, and go to state 73
    MOINS           shift, and go to state 74
    '('             shift, and go to state 76

    $default  reduce using rule 58 (liste_expressions)

    variable            go to state 77
    expression          go to state 83
    liste_expressions   go to state 84
    expr_liste_creator  go to state 85


State 65

   28 iteration: FOR '(' . affectation ';' condition ';' affectation ')' instruction

    IDENTIFICATEUR  shift, and go to state 86

    affectation  go to state 87
    variable     go to state 62


State 66

   29 iteration: WHILE '(' . condition ')' instruction

    IDENTIFICATEUR  shift, and go to state 72
    CONSTANTE       shift, and go to state 73
    MOINS           shift, and go to state 74
    NOT             shift, and go to state 88
    '('             shift, and go to state 89

    variable    go to state 77
    expression  go to state 90
    condition   go to state 91


State 67

   31 selection: IF '(' . condition ')' instruction
   32          | IF '(' . condition ')' instruction ELSE instruction

    IDENTIFICATEUR  shift, and go to state 72
    CONSTANTE       shift, and go to state 73
    MOINS           shift, and go to state 74
    NOT             shift, and go to state 88
    '('             shift, and go to state 89

    variable    go to state 77
    expression  go to state 90
    condition   go to state 92


State 68

   33 selection: SWITCH '(' . expression ')' instruction

    IDENTIFICATEUR  shift, and go to state 72
    CONSTANTE       shift, and go to state 73
    MOINS           shift, and go to state 74
    '('             shift, and go to state 76

    variable    go to state 77
    expression  go to state 93


State 69

   34 selection: CASE CONSTANTE . ':' instruction

    ':'  shift, and go to state 94


State 70

   35 selection: DEFAULT ':' . instruction

    error           shift, and go to state 43
    IDENTIFICATEUR  shift, and go to state 44
    FOR             shift, and go to state 45
    WHILE           shift, and go to state 46
    IF              shift, and go to state 47
    SWITCH          shift, and go to state 48
    CASE            shift, and go to state 49
    DEFAULT         shift, and go to state 50
    BREAK           shift, and go to state 51
    RETURN          shift, and go to state 52
    '{'             shift, and go to state 53

    instruction  go to state 95
    iteration    go to state 56
    selection    go to state 57
    saut         go to state 58
    affectation  go to state 59
    bloc         go to state 60
    appel        go to state 61
    variable     go to state 62


State 71

   36 saut: BREAK ';' .

    $default  reduce using rule 36 (saut)


State 72

   42 variable: IDENTIFICATEUR .
   56 expression: IDENTIFICATEUR . '(' liste_expressions ')'

    '('  shift, and go to state 96

    $default  reduce using rule 42 (variable)


State 73

   54 expression: CONSTANTE .

    $default  reduce using rule 54 (expression)


State 74

   53 expression: MOINS . expression

    IDENTIFICATEUR  shift, and go to state 72
    CONSTANTE       shift, and go to state 73
    MOINS           shift, and go to state 74
    '('             shift, and go to state 76

    variable    go to state 77
    expression  go to state 97


State 75

   37 saut: RETURN ';' .

    $default  reduce using rule 37 (saut)


State 76

   44 expression: '(' . expression ')'

    IDENTIFICATEUR  shift, and go to state 72
    CONSTANTE       shift, and go to state 73
    MOINS           shift, and go to state 74
    '('             shift, and go to state 76

    variable    go to state 77
    expression  go to state 98


State 77

   43 variable: variable . '[' expression ']'
   55 expression: variable .

    '['  shift, and go to state 81

    $default  reduce using rule 55 (expression)


State 78

   38 saut: RETURN expression . ';'
   45 expression: expression . PLUS expression
   46           | expression . MOINS expression
   47           | expression . DIV expression
   48           | expression . MUL expression
   49           | expression . RSHIFT expression
   50           | expression . LSHIFT expression
   51           | expression . BAND expression
   52           | expression . BOR expression

    PLUS    shift, and go to state 99
    MOINS   shift, and go to state 100
    MUL     shift, and go to state 101
    DIV     shift, and go to state 102
    LSHIFT  shift, and go to state 103
    RSHIFT  shift, and go to state 104
    BAND    shift, and go to state 105
    BOR     shift, and go to state 106
    ';'     shift, and go to state 107


State 79

    2 liste_declarations: liste_declarations . declaration
   40 bloc: '{' liste_declarations . liste_instructions '}'

    VOID  shift, and go to state 4
    INT   shift, and go to state 5

    $default  reduce using rule 21 (liste_instructions)

    declaration         go to state 8
    type                go to state 41
    liste_instructions  go to state 108


State 80

   25 instruction: affectation ';' .

    $default  reduce using rule 25 (instruction)


State 81

   43 variable: variable '[' . expression ']'

    IDENTIFICATEUR  shift, and go to state 72
    CONSTANTE       shift, and go to state 73
    MOINS           shift, and go to state 74
    '('             shift, and go to state 76

    variable    go to state 77
    expression  go to state 109


State 82

   39 affectation: variable '=' . expression

    IDENTIFICATEUR  shift, and go to state 72
    CONSTANTE       shift, and go to state 73
    MOINS           shift, and go to state 74
    '('             shift, and go to state 76

    variable    go to state 77
    expression  go to state 110


State 83

   45 expression: expression . PLUS expression
   46           | expression . MOINS expression
   47           | expression . DIV expression
   48           | expression . MUL expression
   49           | expression . RSHIFT expression
   50           | expression . LSHIFT expression
   51           | expression . BAND expression
   52           | expression . BOR expression
   60 expr_liste_creator: expression .

    PLUS    shift, and go to state 99
    MOINS   shift, and go to state 100
    MUL     shift, and go to state 101
    DIV     shift, and go to state 102
    LSHIFT  shift, and go to state 103
    RSHIFT  shift, and go to state 104
    BAND    shift, and go to state 105
    BOR     shift, and go to state 106

    $default  reduce using rule 60 (expr_liste_creator)


State 84

   41 appel: IDENTIFICATEUR '(' liste_expressions . ')' ';'

    ')'  shift, and go to state 111


State 85

   57 liste_expressions: expr_liste_creator .
   59 expr_liste_creator: expr_liste_creator . ',' expression

    ','  shift, and go to state 112

    $default  reduce using rule 57 (liste_expressions)


State 86

   42 variable: IDENTIFICATEUR .

    $default  reduce using rule 42 (variable)


State 87

   28 iteration: FOR '(' affectation . ';' condition ';' affectation ')' instruction

    ';'  shift, and go to state 113


State 88

   61 condition: NOT . '(' condition ')'

    '('  shift, and go to state 114


State 89

   44 expression: '(' . expression ')'
   63 condition: '(' . condition ')'

    IDENTIFICATEUR  shift, and go to state 72
    CONSTANTE       shift, and go to state 73
    MOINS           shift, and go to state 74
    NOT             shift, and go to state 88
    '('             shift, and go to state 89

    variable    go to state 77
    expression  go to state 115
    condition   go to state 116


State 90

   45 expression: expression . PLUS expression
   46           | expression . MOINS expression
   47           | expression . DIV expression
   48           | expression . MUL expression
   49           | expression . RSHIFT expression
   50           | expression . LSHIFT expression
   51           | expression . BAND expression
   52           | expression . BOR expression
   64 condition: expression . binary_comp expression
